# docs/swagger.yaml
@@ -8,7 +8,7 @@ definitions:
         type: string
       new_password:
         maxLength: 72
-        minLength: 8
+        minLength: 12
         type: string
     required:
     - current_password
@@ -49,7 +49,7 @@ definitions:
         type: string
       password:
         maxLength: 72
-        minLength: 8
+        minLength: 12
         type: string
       username:
         maxLength: 25
@@ -64,7 +64,7 @@ definitions:
     properties:
       new_password:
         maxLength: 72
-        minLength: 8
+        minLength: 12
         type: string
       token:
         type: string
@@ -114,6 +114,8 @@ definitions:
     properties:
       data: {}
       message:
+        type: string
+      request_id:
         type: string
       status:
         type: boolean
